--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,4 +1,13 @@
 .home {
-    background: yellow;
-    border: solid 2px gray
+    width: 1200px;
+    margin: auto;
+}
+
+.cardHolder {
+    background: white;
+    border-radius: 18px;
+    margin-top: 20px;
+    display: flex;
+    padding: 40px;
+    height: 800px; /* TODO: remove this */
 }
