--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,18 @@
+.header {
+  display: flex;
+  align-items: center;
+  margin-top: 15px;
+}
+
 .logo {
-    width: 158px;
-    height: auto;
+  width: 158px;
+  height: auto;
+}
+
+.loginLink,
+.loggedInUserEmail {
+  font-size: 18px;
+  color: white;
+  text-decoration: none;
+  margin-left: auto;
 }
