--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -3,10 +3,14 @@
   margin: auto;
 }
 
-.cardHolder {
+.cardsHolder {
   background: white;
   border-radius: 18px;
   margin-top: 20px;
   display: flex;
+  height: 800px;
   padding: 40px;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
